Added readme, changed how project is built.

--- a/.gitignore
+++ b/.gitignore
@@ -3,5 +3,17 @@ build/
 *.ino
 *.sh
 *.m
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+/solveMPC.cpp
 
 eigenHelper.h
